--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profil Singkat | Syam Dzaki Rahman </title>
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="kontak.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
@@ -129,7 +129,7 @@
       <h2>KONTAK</h2>
       <ul>
         <li>Email : <a href="mailto:syamdzfaqod7@gmail.com">syamdzfaqod7@gmail.com</a></li>
-        <li>Github : <a href="https://github.com/syamfaqod" target="_blank">syamfaqod</a></li>
+        <li>Github : <a href="https://github.com/syamdzfaqod" target="_blank">syamdzfaqod</a></li>
         <li>Whatsapp : <a href="088271202896">+62 882 7120 2896</a></li>
       </ul>
     </section>
@@ -141,4 +141,5 @@
     <p>&copy; 2025 Syam Dzaki Rahman | 2925084. All rights reserved.</p>
   </footer>
 </body>
+
 </html>
